# goph551-w2025-final-EG

./: .gitignore  06_elastic_varying_parameters.out.ipynb  README.md  elastic_varying_parameters.py  model_points.csv  orientations.csv  performance_test.py  pyproject.toml  synthetic.py  test_model_module.py
models/Marmousi/: rho.txt  vp.txt  vs.txt
src/final_project/: model.py  model_from_bin.py
